--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
           </div>
         </div>
       </section>
-      <div class="gradient1"></div>
-      <div class="gradient2"></div>
+      <div class="grad"></div>
     </header>
     <main>
       <section class="sec1 pt-5" id="Features">
